# PHiLiP

src/: CMakeLists.txt  main.cpp
src/dg/: CMakeLists.txt  artificial_dissipation.cpp  artificial_dissipation_factory.cpp  dg_base_state.cpp  dg_factory.cpp  strong_dg.cpp  weak_dg.cpp
src/flow_solver/: CMakeLists.txt  flow_solver.cpp  flow_solver_factory.cpp
src/flow_solver/flow_solver_cases/: flow_solver_case_base.cpp  periodic_cube_flow.cpp  periodic_entropy_tests.cpp
src/numerical_flux/: CMakeLists.txt  convective_numerical_flux.cpp  numerical_flux_factory.cpp  viscous_numerical_flux.cpp
src/physics/: model_factory.cpp  physics.cpp  physics_factory.cpp  real_gas.cpp  real_gas.h
src/physics/initial_conditions/: CMakeLists.txt  initial_condition_function.cpp  initial_condition_function.h  set_initial_condition.cpp
src/post_processor/: physics_post_processor.cpp
src/solution/: local_solution.cpp
src/testing/: CMakeLists.txt  tests.cpp
